body shifting issue

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background: var(--bg);
   margin: 0;
   height: 100%;
+  width: 100%;
   color: var(--ui);
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     Arial;
